fixing layout issues with inner elements

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -11,13 +11,13 @@ body, html {
 
 .italic {
   font-style: italic;
-  font-size: 28.8px;
+  font-size: 0.9em;
 }
 
 .italic-and-bold {
   font-style: italic;
   font-weight:bold;
-  font-size: 28.8px;
+  font-size: 0.9em;
 }
 
 h1 {
